--- a/root-app.yaml
+++ b/root-app.yaml
@@ -18,6 +18,7 @@ spec:
     automated:
       prune: true
       selfHeal: true
+      allowEmpty: true
     syncOptions:
       - CreateNamespace=true
     retry:
